force-app/main/default/objects/UserMeasurement__c/UserMeasurement__c.object-meta.xml
<CustomObject>
    <label>User Measurement</label>
    <nameField>
        <displayFormat>UM{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>