force-app/main/default/objects/UserMeasurement__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>CASESAFEID( User__r.Id ) + &apos;-&apos; +  CASESAFEID( Measurement__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>