force-app/main/default/objects/UserMeasurement__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>